[gd_scene load_steps=6 format=2]

[ext_resource path="res://hud/system/buildings/hangar.gd" type="Script" id=1]
[ext_resource path="res://gui/menu/menu_header.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/menu/menu_body.gd" type="Script" id=3]
[ext_resource path="res://hud/system/buildings/hangar/ship_type_build.tscn" type="PackedScene" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/shipyard_64px.png-9659b91d7bdcf9c341e17aaa0f9fc354.stex"

[node name="Hangar" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuHeader" parent="." instance=ExtResource( 2 )]
margin_right = 2474.0
margin_bottom = 31.0
text = "hud.details.building.hangar.menu_title"
texture = SubResource( 1 )

[node name="MenuBody" type="PanelContainer" parent="."]
show_behind_parent = true
margin_top = 31.0
margin_right = 2474.0
margin_bottom = 1080.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Body" type="VBoxContainer" parent="MenuBody"]
margin_left = 7.0
margin_top = 7.0
margin_right = 2467.0
margin_bottom = 1042.0
size_flags_vertical = 3

[node name="ShipProductionList" type="PanelContainer" parent="MenuBody/Body"]
margin_right = 2460.0
margin_bottom = 912.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBody/Body/ShipProductionList"]
margin_left = 7.0
margin_top = 7.0
margin_right = 2453.0
margin_bottom = 905.0

[node name="Label" type="Label" parent="MenuBody/Body/ShipProductionList/VBoxContainer"]
margin_right = 2446.0
margin_bottom = 14.0
text = "hud.details.building.hangar.production_line"

[node name="ScrollContainer" type="ScrollContainer" parent="MenuBody/Body/ShipProductionList/VBoxContainer"]
margin_top = 18.0
margin_right = 2446.0
margin_bottom = 898.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBody/Body/ShipProductionList/VBoxContainer/ScrollContainer"]
margin_right = 2446.0
margin_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShipOrder" type="PanelContainer" parent="MenuBody/Body"]
margin_top = 916.0
margin_right = 2460.0
margin_bottom = 990.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBody/Body/ShipOrder"]
margin_left = 7.0
margin_top = 7.0
margin_right = 2453.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MenuBody/Body/ShipOrder/VBoxContainer"]
margin_right = 2446.0
margin_bottom = 14.0
text = "hud.details.building.hangar.order_ship"

[node name="ShipTypeBuild" parent="MenuBody/Body/ShipOrder/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 2446.0
margin_bottom = 60.0

[node name="ShipHangar" type="PanelContainer" parent="MenuBody/Body"]
margin_top = 994.0
margin_right = 2460.0
margin_bottom = 1035.0
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBody/Body/ShipHangar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 2453.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="MenuBody/Body/ShipHangar/VBoxContainer"]
margin_right = 2446.0
margin_bottom = 14.0
text = "hud.details.building.hangar.hangar_ship"

[node name="Control" type="Control" parent="MenuBody/Body/ShipHangar/VBoxContainer"]
margin_top = 18.0
margin_right = 2446.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="MenuBody/Body/ShipHangar/VBoxContainer"]
margin_top = 27.0
margin_right = 2446.0
margin_bottom = 27.0
size_flags_vertical = 3
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="MenuBody/Body/ShipHangar/VBoxContainer/ScrollContainer"]
margin_right = 2446.0
size_flags_horizontal = 3
size_flags_vertical = 3
